--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -8,7 +8,4 @@ jobs:
   build:
     runs-on : ubuntu-latest
 
-    steps:
-      -uses: actions/checkout@v2
-      -run: npm ci
-      -run: npm run build
+    steps: [uses : actions/checkout@v2 , run: npm ci , run: npm run build]
