--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "firebase": "^8.6.8",
+    "firebase-tools": "^9.14.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "^4.0.3"
